scripts/openshift/deployment_fuse-adapter-animalorder-soap.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: fuse-adapter-animalorder-soap
  namespace: fuse-microcks-demo
  labels:
    app: fuse-adapter-animalorder-soap
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: fuse-adapter-animalorder-soap
  template:
    metadata:
      labels:
        deployment: fuse-adapter-animalorder-soap
    spec:
      containers:     
        - name: fuse-adapter-animalorder-soap
          image: >-
            default-route-openshift-image-registry.apps.test-cluster.vs-cloud.nl/fuse-microcks-demo/fuse-adapter-animalorder-soap:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          ports:
            - name: metrics
              containerPort: 8081
              protocol: TCP
            - name: https-ros
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: keystore-cert
              readOnly: true
              mountPath: /etc/keystore-cert/
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
        - name: keystore-cert
          secret:
            secretName: fuse-adapter-animalorder-soap-tls-cert
            defaultMode: 420
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
