scripts/openshift/route_fuse-adapter-animalorder-soap.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fuse-adapter-animalorder-soap     
  namespace: fuse-microcks-demo
spec:
  to:
    kind: Service
    name: fuse-adapter-animalorder-soap
    weight: 100
  port:
    targetPort: http-soap
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
